@@ -36,6 +36,8 @@ Changes for 3.0.5rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-10713] fixed incorrect macro {ESC.HISTORY} that gathers history about one event to different actions (Sergejs)
+........S. [ZBX-10759] fixed trigger prototypes status when host become unavailable (Sergejs)
 ........S. [ZBX-10971] fixed memory leak when action is removed from configuration (Sergejs)
 ........S. [ZBX-10721] made the third parameter (<port>) of "net.tcp.service" optional (Sergejs)
 ...G...... [ZBX-11015] fixed proc.cpu.util for non-privileged agent on Solaris (Sandis)
@@ -1472,6 +1474,8 @@ Changes for 2.2.15rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-10713] fixed incorrect macro {ESC.HISTORY} that gathers history about one event to different actions (Sergejs)
+........S. [ZBX-10759] fixed trigger prototypes status when host become unavailable (Sergejs)
 ........S. [ZBX-10721] made the third parameter (<port>) of "net.tcp.service" optional (Sergejs)
 ........S. [ZBX-11012] fixed expansion of macro {DISCOVERY.RULE.NAME} (viktors)
 ..F....... [ZBX-10903] prevented parsing "data-id" values with jQuery "data" method (Cemeris) 
